# RGF

./: .gitmodules  CMakeLists.txt  README.md
include/: Application.h  Object.h  Window.h
src/: main.cpp
